--- a/style.css
+++ b/style.css
@@ -64,8 +64,8 @@
 .sp{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center;
+    align-items: center; */
     padding: 30px;
     border: 1px solid;
     background-color: rgb(190, 188, 186);
@@ -75,7 +75,13 @@
     justify-content: flex-start;
     align-self: start;
 }
+.sp button{
+    /* text-align: start; */
+    display: flex;
+    align-self: start;
+}
 .more{
+    
     background-color: brown;
     color: aliceblue;
 }
@@ -116,6 +122,13 @@
     padding-left: 20px;
     border: 1px solid;
     background-color: rgb(190, 188, 186);
+}
+.sp1 h2{
+    display: flex;
+    justify-content: start;
+    align-self: start;
+
+
 }
 .sp3{
     display: flex;
@@ -234,14 +247,22 @@ iframe{
     
        
         /* background-color: rgb(0, 255, 195); */
-
-
+    }
+    .sp{
+            padding: 30px;
+            border: 1px solid;
+            background-color: rgb(190, 188, 186);
+        }
         
 
-    }
+    
     .l_start{
         padding:10px;
         background-color: rgb(206, 131, 247);
+
+        padding-top: 25px;
+     
+    
         
 
         
@@ -264,7 +285,24 @@ iframe{
 
     }
 
+    .list{
+background-color: whitesmoke;
+padding: 20px;
 
+
+
+    }
+    .list:hover{
+        background-color: red;
+        color:white;
+    }
+    .list a:hover{
+        color: aqua;
+
+    }
+
+    
+    
 
 
 
@@ -313,6 +351,13 @@ iframe{
         /* margin: 20px; */
         /* padding-right: 20px; */
     }
+    .sp1 h2{
+        display: flex;
+        justify-content: start;
+        align-self: start;
+        margin-left: 15%;
+    
+    }
     .sp p{
         width: 100%;
     }
@@ -341,5 +386,10 @@ iframe{
     .end{
         display: grid;
         grid-template-columns: repeat(3 ,1fr);
+    }
+    .end2{
+        display: grid;
+        justify-content: center;
+        padding: 15%;
     }
 } 
