--- a/style.css
+++ b/style.css
@@ -170,6 +170,9 @@ span{
     width: 100%;
     height: 40vh;
 }
+#image:hover{
+    transform: scaleX(1.2);
+}
 .contact1{
     display: flex;
     background-color: rgb(100, 215, 112);
